==> NEHAL608/democode/components/ina291/INA219.c <==
#include "INA219.h"
#define HAL_OK 0

int8_t wireWriteRegister(uint8_t addr, uint8_t reg, uint16_t value)
{
	int8_t result = HAL_OK;

	uint8_t data[2];
	data[0] = ( value >> 8 ) & 0xFF;
	data[1] = value & 0xFF;

	if (i2c_master_Write(INA219_ADDRESS,reg,data,2))
		result = 1;

#if DEBUGPRINT
  printf("Function			: wireWriteRegister\r\n");
  printf("Device Address	: %d\r\n",addr);
  printf("Write Register	: %d\r\n",reg);
  printf("Value to write	: %d\r\n",value);
#endif
	return result;
}

int8_t wireReadRegister(uint8_t addr, uint8_t reg, uint16_t *value)
{
	int8_t result;
	uint8_t data[2];
	result=i2c_master_Read(INA219_ADDRESS,reg,data,2);
  if(result !=ESP_OK)
    *value=0;
  else  
    *value = ( data[0] << 8 ) + data[1];
	return result;
}

int16_t getBusVoltage_raw(float *bat_voltage) 
{
  uint16_t value;
  esp_err_t result = ESP_OK;
  result = wireReadRegister(INA219_ADDRESS, INA219_REG_BUSVOLTAGE, &value);
	if(result!=ESP_OK)
	  return 0;
	else
   {
    *bat_voltage=((int16_t)((value >> 3) * 4))* 0.001;
    return 1 ;
   }
  // Shift to the right 3 to drop CNVR and OVF and multiply by LSB
}
