==> nehalrohit/uartecho_CC3220SF_LAUNCHXL_tirtos_ccs/INA219.c <==
#include "INA219.h"

int8_t wireWriteRegister(uint8_t addr, uint8_t reg, uint16_t value)
{
	int8_t result = HAL_OK;

	uint8_t data[2];
	data[0] = ( value >> 8 ) & 0xFF;
	data[1] = value & 0xFF;

	if (HAL_I2C_Mem_Write(addr,reg,data,2))
		result = 1;

#if DEBUGPRINT
  printf("Function			: wireWriteRegister\r\n");
  printf("Device Address	: %d\r\n",addr);
  printf("Write Register	: %d\r\n",reg);
  printf("Value to write	: %d\r\n",value);
#endif
	return result;
}

int8_t wireReadRegister(uint8_t addr, uint8_t reg, uint16_t *value)
{
	int8_t result = HAL_OK;

	uint8_t data[2];


	if (HAL_I2C_Mem_Read(addr,reg,data,2))
		result = 1;

	*value = ( data[0] << 8 ) + data[1];
#if DEBUGPRINT
  printf("Function			: wireReadRegister\r\n");
  printf("Device Address	: %d\r\n",addr);
  printf("Read Register		: %d\r\n",reg);
  printf("Value				: %d\r\n",*value);
#endif
	return result;
}

int16_t getBusVoltage_raw(INA219 *ptemp) {
  uint16_t value;
  int8_t result = HAL_OK;

  result = wireReadRegister(ptemp->addr, INA219_REG_BUSVOLTAGE, &value);

	if(result)
	{
		value = 0;
	}
#if DEBUGPRINT
  printf("Function			: getBusVoltage_raw\r\n");
  printf("Device Address	: %d\r\n",ptemp->addr);
  printf("Read Register		: %d\r\n",INA219_REG_BUSVOLTAGE);
  printf("BusVoltage_raw	: %d\r\n",value);
#endif
  // Shift to the right 3 to drop CNVR and OVF and multiply by LSB
  return (int16_t)((value >> 3) * 4);
}
